--- a/Libraries/Tridion.Extensions.DynamicDelivery.ContentModel.Contracts/Tridion.Extensions.DynamicDelivery.ContentModel.Contracts.csproj
+++ b/Libraries/Tridion.Extensions.DynamicDelivery.ContentModel.Contracts/Tridion.Extensions.DynamicDelivery.ContentModel.Contracts.csproj
@@ -40,6 +40,23 @@
     <WarningLevel>4</WarningLevel>
     <RunCodeAnalysis>true</RunCodeAnalysis>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'TridionDebug|AnyCPU'">
+    <DebugSymbols>true</DebugSymbols>
+    <OutputPath>bin\TridionDebug\</OutputPath>
+    <DefineConstants>CODE_ANALYSIS;DEBUG;TRACE</DefineConstants>
+    <DebugType>full</DebugType>
+    <PlatformTarget>AnyCPU</PlatformTarget>
+    <RunCodeAnalysis>true</RunCodeAnalysis>
+    <CodeAnalysisLogFile>bin\Debug\Tridion.Extensions.DynamicDelivery.ContentModel.Contracts.dll.CodeAnalysisLog.xml</CodeAnalysisLogFile>
+    <CodeAnalysisUseTypeNameInSuppression>true</CodeAnalysisUseTypeNameInSuppression>
+    <CodeAnalysisModuleSuppressionsFile>GlobalSuppressions.cs</CodeAnalysisModuleSuppressionsFile>
+    <ErrorReport>prompt</ErrorReport>
+    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
+    <CodeAnalysisRuleSetDirectories>;C:\Program Files (x86)\Microsoft Visual Studio 10.0\Team Tools\Static Analysis Tools\\Rule Sets</CodeAnalysisRuleSetDirectories>
+    <CodeAnalysisIgnoreBuiltInRuleSets>true</CodeAnalysisIgnoreBuiltInRuleSets>
+    <CodeAnalysisRuleDirectories>;C:\Program Files (x86)\Microsoft Visual Studio 10.0\Team Tools\Static Analysis Tools\FxCop\\Rules</CodeAnalysisRuleDirectories>
+    <CodeAnalysisIgnoreBuiltInRules>true</CodeAnalysisIgnoreBuiltInRules>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -58,7 +75,6 @@
     <Compile Include="Exceptions\PageNotFoundException.cs" />
     <Compile Include="Factories\ITaxonomyFactory.cs" />
     <Compile Include="Factories\IModelFactory.cs" />
-    <Compile Include="Factories\IQueryFactory.cs" />
     <Compile Include="Factories\IBinaryFactory.cs" />
     <Compile Include="Factories\IComponentFactory.cs" />
     <Compile Include="Factories\ILinkFactory.cs" />
