--- a/Libraries/Tridion.Extensions.DynamicDelivery.Factories.LocalDatabase/Tridion.Extensions.DynamicDelivery.Factories.LocalDatabase.csproj
+++ b/Libraries/Tridion.Extensions.DynamicDelivery.Factories.LocalDatabase/Tridion.Extensions.DynamicDelivery.Factories.LocalDatabase.csproj
@@ -5,21 +5,13 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{9E96EFE0-7478-4551-A47A-1F04B9F01DF7}</ProjectGuid>
+    <ProjectGuid>{0227A3C2-4F9E-4459-A5B8-2E2803F552AB}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Tridion.Extensions.DynamicDelivery.Factories</RootNamespace>
-    <AssemblyName>Tridion.Extensions.DynamicDelivery.Factories.Base</AssemblyName>
+    <RootNamespace>Tridion.Extensions.DynamicDelivery.Factories.LocalDatabase</RootNamespace>
+    <AssemblyName>Tridion.Extensions.DynamicDelivery.Factories.LocalDatabase</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <SccProjectName>
-    </SccProjectName>
-    <SccLocalPath>
-    </SccLocalPath>
-    <SccAuxPath>
-    </SccAuxPath>
-    <SccProvider>
-    </SccProvider>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -29,7 +21,6 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <RunCodeAnalysis>true</RunCodeAnalysis>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -39,27 +30,10 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'TridionDebug|AnyCPU'">
-    <DebugSymbols>true</DebugSymbols>
-    <OutputPath>bin\TridionDebug\</OutputPath>
-    <DefineConstants>CODE_ANALYSIS;DEBUG;TRACE</DefineConstants>
-    <DebugType>full</DebugType>
-    <PlatformTarget>AnyCPU</PlatformTarget>
-    <RunCodeAnalysis>true</RunCodeAnalysis>
-    <CodeAnalysisLogFile>bin\Debug\Tridion.Extensions.DynamicDelivery.Factories.Base.dll.CodeAnalysisLog.xml</CodeAnalysisLogFile>
-    <CodeAnalysisUseTypeNameInSuppression>true</CodeAnalysisUseTypeNameInSuppression>
-    <CodeAnalysisModuleSuppressionsFile>GlobalSuppressions.cs</CodeAnalysisModuleSuppressionsFile>
-    <ErrorReport>prompt</ErrorReport>
-    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
-    <CodeAnalysisRuleSetDirectories>;C:\Program Files (x86)\Microsoft Visual Studio 10.0\Team Tools\Static Analysis Tools\\Rule Sets</CodeAnalysisRuleSetDirectories>
-    <CodeAnalysisIgnoreBuiltInRuleSets>false</CodeAnalysisIgnoreBuiltInRuleSets>
-    <CodeAnalysisRuleDirectories>;C:\Program Files (x86)\Microsoft Visual Studio 10.0\Team Tools\Static Analysis Tools\FxCop\\Rules</CodeAnalysisRuleDirectories>
-    <CodeAnalysisIgnoreBuiltInRules>false</CodeAnalysisIgnoreBuiltInRules>
-  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.Composition" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -67,9 +41,26 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BinaryFactory.cs" />
+    <Compile Include="ComponentFactory.cs" />
+    <Compile Include="LinkFactory.cs" />
+    <Compile Include="PageFactory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TridionFactoryBase.cs" />
-    <Compile Include="Utilities\TridionHelper.cs" />
+    <Compile Include="TaxonomyFactory.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Tridion.Extensions.DynamicDelivery.ContentModel.Contracts\Tridion.Extensions.DynamicDelivery.ContentModel.Contracts.csproj">
+      <Project>{6F624D68-173F-4D5E-A70F-073663009100}</Project>
+      <Name>Tridion.Extensions.DynamicDelivery.ContentModel.Contracts</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Tridion.Extensions.DynamicDelivery.ContentModel\Tridion.Extensions.DynamicDelivery.ContentModel.csproj">
+      <Project>{FDA7B072-C0B1-46E6-A3DB-B68CA1BCDBBD}</Project>
+      <Name>Tridion.Extensions.DynamicDelivery.ContentModel</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Tridion.Extensions.DynamicDelivery.Factories.Base\Tridion.Extensions.DynamicDelivery.Factories.Base.csproj">
+      <Project>{9E96EFE0-7478-4551-A47A-1F04B9F01DF7}</Project>
+      <Name>Tridion.Extensions.DynamicDelivery.Factories.Base</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
