--- a/Libraries/Tridion.Extensions.DynamicDelivery.Factories.LocalDatabase/Tridion.Extensions.DynamicDelivery.Factories.LocalDatabase.csproj
+++ b/Libraries/Tridion.Extensions.DynamicDelivery.Factories.LocalDatabase/Tridion.Extensions.DynamicDelivery.Factories.LocalDatabase.csproj
@@ -63,6 +63,12 @@
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PreBuildEvent>del /Q /F $(SolutionDir)\SampleWebsite\Bin\*.Factories.*</PreBuildEvent>
+  </PropertyGroup>
+  <PropertyGroup>
+    <PostBuildEvent>Copy /Y $(TargetDir)*.dll $(SolutionDir)SampleWebsite\bin\</PostBuildEvent>
+  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
