--- a/Libraries/Tridion.Extensions.DynamicDelivery.Factories.Base/Tridion.Extensions.DynamicDelivery.Factories.Base.csproj
+++ b/Libraries/Tridion.Extensions.DynamicDelivery.Factories.Base/Tridion.Extensions.DynamicDelivery.Factories.Base.csproj
@@ -57,7 +57,11 @@
     <CodeAnalysisIgnoreBuiltInRules>false</CodeAnalysisIgnoreBuiltInRules>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="netrtsn">
+      <HintPath>..\Tridion Dependencies\netrtsn.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
@@ -65,11 +69,31 @@
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
+    <Reference Include="Tridion.ContentDelivery">
+      <HintPath>..\Tridion Dependencies\Tridion.ContentDelivery.dll</HintPath>
+    </Reference>
+    <Reference Include="Tridion.ContentDelivery.Configuration">
+      <HintPath>..\Tridion Dependencies\Tridion.ContentDelivery.Configuration.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TridionBinaryFactoryBase.cs" />
+    <Compile Include="TridionComponentFactoryBase.cs" />
     <Compile Include="TridionFactoryBase.cs" />
+    <Compile Include="TridionLinkFactoryBase.cs" />
+    <Compile Include="TridionTaxonomyFactoryBase.cs" />
     <Compile Include="Utilities\TridionHelper.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Tridion.Extensions.DynamicDelivery.ContentModel.Contracts\Tridion.Extensions.DynamicDelivery.ContentModel.Contracts.csproj">
+      <Project>{6F624D68-173F-4D5E-A70F-073663009100}</Project>
+      <Name>Tridion.Extensions.DynamicDelivery.ContentModel.Contracts</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Tridion.Extensions.DynamicDelivery.ContentModel\Tridion.Extensions.DynamicDelivery.ContentModel.csproj">
+      <Project>{FDA7B072-C0B1-46E6-A3DB-B68CA1BCDBBD}</Project>
+      <Name>Tridion.Extensions.DynamicDelivery.ContentModel</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
