--- a/SampleWebsite/SampleWebsite/SampleWebsite/Web.config
+++ b/SampleWebsite/SampleWebsite/SampleWebsite/Web.config
@@ -15,6 +15,10 @@
     <add key="webpages:Version" value="1.0.0.0"/>
     <add key="ClientValidationEnabled" value="true"/>
     <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
+
+	  <add key="Site.ActiveWebsite" value="TestWebSite"/>
+	  <add key="WebSite.TestWebSite.PublicationId" value="1"/>
+
   </appSettings>
 
   <system.web>
